adding images folder

--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
         <nav>
             <ul>
                 <li class="home_logo">
-                    <img src="home_logo.png" alt="home_logo" class="home_img_size">
-                    <img src="home_logo_hover.png" alt="home_logo" class="home_img_size_hover">
+                    <img src="images/home_logo.png" alt="home_logo" class="home_img_size">
+                    <img src="images/home_logo_hover.png" alt="home_logo" class="home_img_size_hover">
                     <h3>Logo</h3>
                 </li>
                 <li class="other_logo_container">
-                    <img src="world_logo.png" alt="world_logo" class="logo_img_header">
-                    <img src="world_logo_hover.png" alt="world_logo"  class="logo_img_header_hover">
+                    <img src="images/world_logo.png" alt="world_logo" class="logo_img_header">
+                    <img src="images/world_logo_hover.png" alt="world_logo"  class="logo_img_header_hover">
                 </li>
                 <li class="other_logo_container">
-                    <img src="person_logo.png" alt="person_logo" class="logo_img_header">
-                    <img src="person_logo_hover.png" alt="person_logo" class="logo_img_header_hover">
+                    <img src="images/person_logo.png" alt="person_logo" class="logo_img_header">
+                    <img src="images/person_logo_hover.png" alt="person_logo" class="logo_img_header_hover">
 
                 </li>
                 <li class="other_logo_container">
-                    <img src="message_logo.png" alt="person_logo" class="logo_img_header">
-                    <img src="message_logo_hover.png" alt="person_logo" class="logo_img_header_hover">
+                    <img src="images/message_logo.png" alt="person_logo" class="logo_img_header">
+                    <img src="images/message_logo_hover.png" alt="person_logo" class="logo_img_header_hover">
                 </li>
                 <li class="noti_container" id="notification">
-                    <img src="notification_logo.png" alt="person_logo" id="logo_img_header_noti" class="logo_img_header_noti">
-                    <img src="notification_logo_hover.png" alt="person_logo" id="logo_img_header_noti_hover" class="logo_img_header_noti_hover">
+                    <img src="images/notification_logo.png" alt="person_logo" id="logo_img_header_noti" class="logo_img_header_noti">
+                    <img src="images/notification_logo_hover.png" alt="person_logo" id="logo_img_header_noti_hover" class="logo_img_header_noti_hover">
                 </li>
             </ul>
             <div class="profile_picture_container">
-                <img src="profile_picture.png" alt="profile_picture" class="profile_img_size">
+                <img src="images/profile_picture.png" alt="profile_picture" class="profile_img_size">
             </div>
         </nav>
     </header>
@@ -61,54 +61,54 @@
         <div class="column_1">
             <div class="profile_column">
                 <p>My Profile</p>
-                    <img src="JL Prof.jpg" alt="avatar" class="avatar">
+                    <img src="images/JL Prof.jpg" alt="avatar" class="avatar">
                     <h2>John Lloyd Angeles</h2>
                 <hr class="column_line">
                 <div class="logo_container">
                     <p>
-                        <img src="pensil_logo.png" alt="pensil_logo" class="profile_img_size_logo">
+                        <img src="images/pensil_logo.png" alt="pensil_logo" class="profile_img_size_logo">
                         Designer, UI
                     </p>
                     <p>
-                        <img src="coloum_house_logo.png" alt="pensil_logo" class="profile_img_size_logo">
+                        <img src="imagest/coloum_house_logo.png" alt="pensil_logo" class="profile_img_size_logo">
                         CDO, Philippines
                     </p>
                     <p>
-                        <img src="cake.png" alt="pensil_logo" class="profile_img_size_logo">
+                        <img src="images/cake.png" alt="pensil_logo" class="profile_img_size_logo">
                         December 13, 2004
                     </p>
                 </div>
             </div>
             <div class="button_container">
                 <button id="my_group">
-                    <img src="my_group.png" alt="my_group" class="not_hover">
-                    <img src="my_group_hover.png" alt="my_group" class="button_hover">
+                    <img src="imagest/my_group.png" alt="my_group" class="not_hover">
+                    <img src="images/my_group_hover.png" alt="my_group" class="button_hover">
                     <p>My Groups</p>
                 </button>
                 <div id="my_group_clicked">
                     <p>Some text..</p>
                 </div>
                 <button id="my_event">
-                    <img src="my_event_logo.png" alt="my_group" class="not_hover">
-                    <img src="my_event_logo_hover.png" alt="my_group" class="button_hover">
+                    <img src="images/my_event_logo.png" alt="my_group" class="not_hover">
+                    <img src="images/my_event_logo_hover.png" alt="my_group" class="button_hover">
                     <p>My Events</p>
                 </button>
                 <div id="my_event_clicked">
                     <p>Some other text..</p>
                 </div>
                 <button id="my_photos">
-                    <img src="my_photos.png" alt="my_group" class="not_hover">
-                    <img src="my_photos_hover.png" alt="my_group" class="button_hover">
+                    <img src="images/my_photos.png" alt="my_group" class="not_hover">
+                    <img src="images/my_photos_hover.png" alt="my_group" class="button_hover">
                     <p>My Photos</p>
                 </button>
                 <div id="my_photos_clicked">
                     <div class="my_photo_cls">
-                        <img src="lights.jpg" alt="lights">
-                        <img src="nature.jpg" alt="nature">
-                        <img src="mountains.jpg" alt="nature">
-                        <img src="forest.jpg" alt="nature">
-                        <img src="nature (1).jpg" alt="nature">
-                        <img src="snow.jpg" alt="nature">
+                        <img src="images/lights.jpg" alt="lights">
+                        <img src="images/nature.jpg" alt="nature">
+                        <img src="images/mountains.jpg" alt="nature">
+                        <img src="images/forest.jpg" alt="nature">
+                        <img src="images/nature (1).jpg" alt="nature">
+                        <img src="images/snow.jpg" alt="nature">
                     </div>
                 </div>
             </div>
@@ -143,15 +143,15 @@
                 <p>Social Media template by w3.css</p>
                 <input type="text" value="Status: Feeling Blue" class="status">
                 <button>
-                    <img src="post_logo.png" alt="post_logo" class="not_hover">
-                    <img src="post_logo_hover.png" alt="post_logo" class="is_hover">
+                    <img src="images/post_logo.png" alt="post_logo" class="not_hover">
+                    <img src="images/post_logo_hover.png" alt="post_logo" class="is_hover">
                     Post
                 </button>
             </div>
             <div class="_2nd_column_container_two">
                 <div class="profile_top_column">
                     <div class="profile_details">
-                        <img src="JL Prof.jpg" alt="profile picture">
+                        <img src="images/JL Prof.jpg" alt="profile picture">
                         <p>John Lloyd Angeles</p>
                     </div>
                     <p>1 min</p>
@@ -159,19 +159,19 @@
                 <hr/>
                 <p class="caption_text"> I'm John Lloyd Angeles, an enthusiastic IT student with a passion for web development, particularly in front-end design. </p>
                 <div class="post_picture">
-                    <img src="lights.jpg" alt="lights">
-                    <img src="nature (1).jpg" alt="mountains">
+                    <img src="images/lights.jpg" alt="lights">
+                    <img src="images/nature (1).jpg" alt="mountains">
                 </div>
 
                 <div class="react_button_cointainer">
                     <button>
-                        <img src="like_logo.png" alt="like logo" class="like_not_hover">
-                        <img src="like_logo_hover.png" alt="like logo" class="like_is_hover">
+                        <img src="images/like_logo.png" alt="like logo" class="like_not_hover">
+                        <img src="images/like_logo_hover.png" alt="like logo" class="like_is_hover">
                         Like
                     </button>
                     <button>
-                        <img src="comment_logo.png" alt="comment logo" class="comment_not_hover">
-                        <img src="comment_logo_hover.png" alt="comment logo" class="comment_is_hover">
+                        <img src="images/comment_logo.png" alt="comment logo" class="comment_not_hover">
+                        <img src="images/comment_logo_hover.png" alt="comment logo" class="comment_is_hover">
                         Comment
                     </button>
                 </div>
@@ -190,13 +190,13 @@
 
                 <div class="react_button_cointainer">
                     <button>
-                        <img src="like_logo.png" alt="like logo" class="like_not_hover">
-                        <img src="like_logo_hover.png" alt="like logo" class="like_is_hover">
+                        <img src="images/like_logo.png" alt="like logo" class="like_not_hover">
+                        <img src="images/like_logo_hover.png" alt="like logo" class="like_is_hover">
                         Like
                     </button>
                     <button>
-                        <img src="comment_logo.png" alt="comment logo" class="comment_not_hover">
-                        <img src="comment_logo_hover.png" alt="comment logo" class="comment_is_hover">
+                        <img src="images/comment_logo.png" alt="comment logo" class="comment_not_hover">
+                        <img src="images/comment_logo_hover.png" alt="comment logo" class="comment_is_hover">
                         Comment
                     </button>
                 </div>
@@ -205,7 +205,7 @@
             <div class="_2nd_column_container_two">
                 <div class="profile_top_column">
                     <div class="profile_details">
-                        <img src="avatar3.png" alt="profile picture">
+                        <img src="images/avatar3.png" alt="profile picture">
                         <p>Angie Jane</p>
                     </div>
                     <p>32 min</p>
@@ -214,19 +214,19 @@
                 <p class="caption_text">Have you seen this?</p>
 
                 <div class="post_picture2">
-                    <img src="nature (1).jpg" alt="mountains">
+                    <img src="images/nature (1).jpg" alt="mountains">
                 </div>
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
                 <div class="react_button_cointainer">
                     <button>
-                        <img src="like_logo.png" alt="like logo" class="like_not_hover">
-                        <img src="like_logo_hover.png" alt="like logo" class="like_is_hover">
+                        <img src="images/like_logo.png" alt="like logo" class="like_not_hover">
+                        <img src="images/like_logo_hover.png" alt="like logo" class="like_is_hover">
                         Like
                     </button>
                     <button>
-                        <img src="comment_logo.png" alt="comment logo" class="comment_not_hover">
-                        <img src="comment_logo_hover.png" alt="comment logo" class="comment_is_hover">
+                        <img src="images/comment_logo.png" alt="comment logo" class="comment_not_hover">
+                        <img src="images/comment_logo_hover.png" alt="comment logo" class="comment_is_hover">
                         Comment
                     </button>
                 </div>
@@ -235,7 +235,7 @@
         <div class="column_3">
             <div class="_3rd_column_container_clm_3">
                 <p>Upcoming Events:</p>
-                <img src="forest.jpg" alt="forest" class="forest">
+                <img src="images/forest.jpg" alt="forest" class="forest">
                 <p class="text_type">Holiday</p>
                 <p>Friday 15:00</p>
                 <button>Info</button>
@@ -243,16 +243,16 @@
 
             <div class="_3rd_column_container_clm_3">
                 <p>Friend Request</p>
-                <img src="avatar3.png" alt="avatar3" class="avatar3">
+                <img src="images/avatar3.png" alt="avatar3" class="avatar3">
                 <p>Jane Doe</p>
                 <div class="confirm_button_container">
                     <button class="confirm_btn">
-                        <img src="confirm_logo.png" alt="confirm_logo" class="confirm_not_hover">
-                        <img src="confirm_logo_hover.png" alt="confirm_logo" class="confirm_is_hover">
+                        <img src="images/confirm_logo.png" alt="confirm_logo" class="confirm_not_hover">
+                        <img src="images/confirm_logo_hover.png" alt="confirm_logo" class="confirm_is_hover">
                     </button>
                     <button class="cancel_btn">
-                        <img src="cancel_logo.png" alt="cancel_logo" class="cancel_not_hover">
-                        <img src="cancel_logo_hover.png" alt="cancel_logo" class="cancel_is_hover">
+                        <img src="images/cancel_logo.png" alt="cancel_logo" class="cancel_not_hover">
+                        <img src="images/cancel_logo_hover.png" alt="cancel_logo" class="cancel_is_hover">
                     </button>
                 </div>
             </div>
@@ -265,7 +265,7 @@
 
             <div class="_3rd_column_container_clm_3">
                 <div class="ads_container">
-                    <img src="bug_logo.png" alt="bug logo">
+                    <img src="images/bug_logo.png" alt="bug logo">
                 </div>
             </div>
         </div>
